Ticket/Attachment/1673647/898176/build.log
cpanm (App::cpanminus) 1.7042 on perl 5.018002 built for darwin-thread-multi-2level
Work directory is /Users/benjamin/.cpanm/work/1475265702.23569
You have make /usr/bin/make
You have LWP 6.05
You have /usr/bin/tar: bsdtar 2.8.3 - libarchive 2.8.3
You have /usr/bin/unzip
Searching Glib () on cpanmetadb ...
--> Working on Glib
Fetching http://www.cpan.org/authors/id/X/XA/XAOC/Glib-1.323.tar.gz
-> OK
Unpacking Glib-1.323.tar.gz
Entering Glib-1.323
Checking configure dependencies from META.json
Checking if you have ExtUtils::PkgConfig 1.000 ... Yes (1.15)
Checking if you have ExtUtils::Depends 0.300 ... Yes (0.405)
Checking if you have ExtUtils::MakeMaker 6.58 ... Yes (6.66)
Configuring Glib-1.323
Running Makefile.PL
Including generated API documentation...
Checking if your kit is complete...
Looks good
Writing Makefile for Glib
Writing MYMETA.yml and MYMETA.json
-> OK
Checking dependencies from MYMETA.json ...
Checking if you have ExtUtils::PkgConfig 1.000 ... Yes (1.15)
Checking if you have ExtUtils::Depends 0.300 ... Yes (0.405)
Checking if you have ExtUtils::MakeMaker 0 ... Yes (6.66)
Building and testing Glib-1.323
cp /Users/benjamin/.cpanm/work/1475265702.23569/Glib-1.323/typemap blib/arch/Glib/Install/typemap
cp lib/Glib/ParseXSDoc.pm blib/lib/Glib/ParseXSDoc.pm
cp devel.pod blib/lib/Glib/devel.pod
cp lib/Glib/MakeHelper.pm blib/lib/Glib/MakeHelper.pm
cp doctypes blib/arch/Glib/Install/doctypes
cp lib/Glib/Object/Subclass.pm blib/lib/Glib/Object/Subclass.pm
cp gperl_marshal.h blib/arch/Glib/Install/gperl_marshal.h
cp lib/Glib.pm blib/lib/Glib.pm
cp lib/Glib/GenPod.pm blib/lib/Glib/GenPod.pm
cp lib/Glib/CodeGen.pm blib/lib/Glib/CodeGen.pm
cp build/IFiles.pm blib/arch/Glib/Install/Files.pm
cp gperl.h blib/arch/Glib/Install/gperl.h
[ XS Glib.xs ]
[ CC Glib.c ]
In file included from Glib.xs:22:
In file included from ./gperl.h:37:
In file included from /usr/local/Cellar/glib/2.48.2/include/glib-2.0/glib-object.h:23:
In file included from /usr/local/Cellar/glib/2.48.2/include/glib-2.0/gobject/gbinding.h:28:
In file included from /usr/local/Cellar/glib/2.48.2/include/glib-2.0/glib.h:30:
In file included from /usr/local/Cellar/glib/2.48.2/include/glib-2.0/glib/galloca.h:32:
/usr/local/Cellar/glib/2.48.2/include/glib-2.0/glib/gtypes.h:422:3: error: '_GStaticAssertCompileTimeAssertion_0' declared as an array with a negative size
  G_STATIC_ASSERT(sizeof (unsigned long long) == sizeof (guint64));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/Cellar/glib/2.48.2/include/glib-2.0/glib/gmacros.h:232:103: note: expanded from macro 'G_STATIC_ASSERT'
#define G_STATIC_ASSERT(expr) typedef char G_PASTE (_GStaticAssertCompileTimeAssertion_, __COUNTER__)[(expr) ? 1 : -1] G_GNUC_UNUSED
                                                                                                      ^~~~~~~~~~~~~~~
1 error generated.
make: *** [Glib.o] Error 1
-> FAIL Installing Glib failed. See /Users/benjamin/.cpanm/work/1475265702.23569/build.log for details. Retry with --force to force install it.
